--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="es">
 <head>
 <meta charset="utf-8">
@@ -103,3 +103,4 @@ $(".mobile-nav-toggle i").toggleClass("fa-bars fa-times");
 </script>
 </body>
 </html>
+
